objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Email_1__c</fullName>
        <label>Account Manager Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Email_2__c</fullName>
        <label>Account Manager Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ActiveForNotices__c</fullName>
        <formula>If(
OR(
 ISPICKVAL( Status__c ,&apos;Shipped&apos; ),
 ISPICKVAL( Status__c ,&apos;Shipped - Extended&apos; )
),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ActiveForNotices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Ship_Date__c</fullName>
        <label>Actual Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Fulfill__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>set by trigger creation of the POC</inlineHelpText>
        <label>Auto Fulfill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bandwidth__c</fullName>
        <label>Bandwidth</label>
        <picklist>
            <picklistValues>
                <fullName>&gt;30Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;10Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;2Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;2Mb</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EdgeConnect_POC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EdgeConnect POC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndCustomerName1__c</fullName>
        <label>End Customer Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndCustomerName2__c</fullName>
        <label>End Customer Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndCustomerName3__c</fullName>
        <label>End Customer Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Ship_Date__c</fullName>
        <label>Estimated Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eval_Network__c</fullName>
        <label>Eval Network</label>
        <picklist>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simulated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EvaluationProductHypervisor__c</fullName>
        <label>Evaluation Product Hypervisor</label>
        <picklist>
            <picklistValues>
                <fullName>VMWare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Hyper V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citrix Xen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KVM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evaluation_Product_1__c</fullName>
        <label>Evaluation Product 1</label>
        <picklist>
            <picklistValues>
                <fullName>VX 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 6000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 7000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 8000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 9000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMS-10 on GX-V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 1700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 2700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 3700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 5700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 7700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 8700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 9700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX-6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evaluation_Product_2__c</fullName>
        <label>Evaluation Product 2</label>
        <picklist>
            <picklistValues>
                <fullName>VX 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 6000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 7000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 8000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 9000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMS-10 on GX-V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 1700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 2700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 3700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 5700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 7700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 8700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 9700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX-6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extension_Justification__c</fullName>
        <inlineHelpText>Input your justification and resubmit for approval</inlineHelpText>
        <label>Extension Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Extension_Granted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Extension Granted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GMS_Needed__c</fullName>
        <label>GMS Ship To</label>
        <picklist>
            <picklistValues>
                <fullName>None Req&apos;d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Phone__c</fullName>
        <description>used to manage submissions for approval check to ensure it has a phone number</description>
        <formula>if( ISBLANK( Shipping_Contact_Phone__c ),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Phone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsAllVirtual__c</fullName>
        <formula>IF( 

OR( 
LEFT(TEXT( Evaluation_Product_1__c ) ,1) = &apos;N&apos;,
LEFT(TEXT( Evaluation_Product_2__c ) ,1) = &apos;N&apos;, 
CONTAINS(TEXT( Evaluation_Product_1__c ) ,&apos;GX-1000&apos;), 
CONTAINS(TEXT( Evaluation_Product_2__c ) ,&apos;GX-1000&apos;),
NOT(ISBLANK(TEXT( PhysicalProduct1__c )))

), 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAllVirtual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>CONTAINS(TEXT(Status__c), &apos;Closed&apos;)</formula>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latency__c</fullName>
        <label>Latency (msecs)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loss__c</fullName>
        <label>Loss %</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketplace_Sourced_Opp__c</fullName>
        <formula>if(ispickval( Opportunity__r.Type ,&quot;Marketplace&quot;), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketplace Sourced Opp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Need_Additional_Approval_For__c</fullName>
        <inlineHelpText>These notes go to Chris Helfer to get additional feedback from him before shipping</inlineHelpText>
        <label>Need Additional Approval For</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OppStage__c</fullName>
        <formula>text( Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OppStage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <description>The owner of the opportunity</description>
        <label>Opportunity Owner</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>POC Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oppty_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_POC_End_Date__c</fullName>
        <label>Original POC End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POC_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>link to contact record for POC communications</inlineHelpText>
        <label>POC Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POC_Type__c</fullName>
        <label>POC Type</label>
        <picklist>
            <picklistValues>
                <fullName>WAN Op</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EdgeConnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partial_Ship__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>check if this is only partially shipped</inlineHelpText>
        <label>Partial Ship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PhysicalLocation1__c</fullName>
        <label>Physical Location1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PhysicalLocation2__c</fullName>
        <label>Physical Location2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PhysicalLocation3__c</fullName>
        <label>Physical Location3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PhysicalProduct1__c</fullName>
        <label>Physical Product1</label>
        <picklist>
            <picklistValues>
                <fullName>NX700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 1700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 2700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 3700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 5700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 6700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 7700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 8700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 9700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX 10700</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PhysicalProduct2__c</fullName>
        <label>Physical Product2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhysicalProduct3__c</fullName>
        <label>Physical Product3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhysicalQuantity1__c</fullName>
        <label>Physical Quantity1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PhysicalQuantity2__c</fullName>
        <label>Physical Quantity2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PhysicalQuantity3__c</fullName>
        <label>Physical Quantity3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_Access_Contact__c</fullName>
        <inlineHelpText>Enter the contact name for the person to be granted Portal Access duing the POC</inlineHelpText>
        <label>Portal Access Contact</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Contact_Email__c</fullName>
        <inlineHelpText>Email address for portal contact requested for POC. Must be correct as this is where the username and password will be sent once activated</inlineHelpText>
        <label>Portal Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>P1 - Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3 - Medium</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>P4 - Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity_Location_1__c</fullName>
        <label>Quantity - Location 1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Location_2__c</fullName>
        <label>Quantity - Location 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSM_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSM Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_End_Date__c</fullName>
        <label>Requested End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_Date__c</fullName>
        <description>Date the units was pulled from evaluation</description>
        <label>Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SE_Email_Address__c</fullName>
        <label>SE Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Second_Extension_Granted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Second Extension Granted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sending_Reminder_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sending Reminder Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact__c</fullName>
        <label>Ship To Contact (if different than POC)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ship_To_Location_1__c</fullName>
        <label>Ship To - Location 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ship_To_Location_2__c</fullName>
        <label>Ship To - Location 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact_Phone__c</fullName>
        <inlineHelpText>Enter the phone number for the shipping contact here. We can&apos;t ship without a phone number!!!</inlineHelpText>
        <label>Shipping Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved to Ship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped - Extended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Return - Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approvals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission_Condition_Satisfied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is checked by the embedded page when all required fields are filled on saving.</description>
        <label>Submission Condition Satisfied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submission_Requirements__c</fullName>
        <formula>&quot;In order to submit a POC for extension approval, you must complete the extension justification and the status must be Shipped or Shipped - Extended. If the POC request is already expired then you must contact Operations to request an extension because an RMA will already have been issued. If it is a virtual POC, then you will need to submit a new POC request because the licenses will be expired.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submission Requirements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Criteria__c</fullName>
        <description>Enter the defined win criteria agreed upon with the prospect</description>
        <label>Quantified Success Criteria</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_Engineer_Email_1__c</fullName>
        <label>System Engineer Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>System_Engineer_Email_2__c</fullName>
        <label>System Engineer Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TRLinkEmail__c</fullName>
        <formula>Opportunity__r.Technical_Responsible__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TRLinkEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TR Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR_Email__c</fullName>
        <formula>Opportunity__r.Technical_Responsible__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TR Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_End_Date_Duration__c</fullName>
        <formula>IF(ISPICKVAL(POC_Type__c,&quot;Service Provider&quot;),90,30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target End Date Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_End_Date__c</fullName>
        <inlineHelpText>This is the date the POC request is approved to run to</inlineHelpText>
        <label>Target End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tech_Responsible_Email__c</fullName>
        <inlineHelpText>Set by automation</inlineHelpText>
        <label>Tech Responsible Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Trigger_POC_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger POC Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Evaluation</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wan Emulator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VirtualProduct1__c</fullName>
        <label>Virtual Product1</label>
        <picklist>
            <picklistValues>
                <fullName>VX 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 6000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 7000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 8000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX 9000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMS-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unity Cloud Intelligence</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VirtualProduct2__c</fullName>
        <label>Virtual Product2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VirtualProduct3__c</fullName>
        <label>Virtual Product3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VirtualQuantity1__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Virtual Quantity1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VirtualQuantity2__c</fullName>
        <label>Virtual Quantity2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VirtualQuantity3__c</fullName>
        <label>Virtual Quantity3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Virtual_Eval_License_Duration__c</fullName>
        <inlineHelpText>Duration for the eval license key to be generated for</inlineHelpText>
        <label>Virtual Eval License Duration</label>
        <picklist>
            <picklistValues>
                <fullName>60 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eval_length__c</fullName>
        <description>Number of days that product was in eval</description>
        <formula>IF( Return_Date__c  &gt; ( TODAY() -1500), Return_Date__c  -  Estimated_Ship_Date__c,   TODAY()  - Estimated_Ship_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>eval_length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>POC Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Requested_Delivery_Date__c</columns>
        <columns>Estimated_Ship_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>eval_length__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>CustSrvc</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_Partial_Shipped_POC_Requests</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved to Ship</value>
        </filters>
        <filters>
            <field>Partial_Ship__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Approved / Partial Shipped POC Requests</label>
        <sharedTo>
            <group>Operations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EvalShipQueue</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Requested_Delivery_Date__c</columns>
        <columns>Evaluation_Product_1__c</columns>
        <columns>Evaluation_Product_2__c</columns>
        <columns>Estimated_Ship_Date__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved,Scheduled</value>
        </filters>
        <label>POC Ship Queue</label>
    </listViews>
    <listViews>
        <fullName>OpenDiscountRequests</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Opportunity__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Discount</value>
        </filters>
        <label>Open Discount Requests</label>
    </listViews>
    <listViews>
        <fullName>OpenEvalRequests</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Requested_Delivery_Date__c</columns>
        <columns>Estimated_Ship_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Approved,Approved to Ship,Scheduled</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Evaluation</value>
        </filters>
        <label>Open POC Requests</label>
    </listViews>
    <listViews>
        <fullName>OpenRequests</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Requested_Delivery_Date__c</columns>
        <columns>Estimated_Ship_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Approved,Approved to Ship,Scheduled</value>
        </filters>
        <label>Open Requests</label>
    </listViews>
    <listViews>
        <fullName>ScheduledEvalShipments</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Requested_Delivery_Date__c</columns>
        <columns>Estimated_Ship_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filters>
        <label>Scheduled POC Shipments</label>
    </listViews>
</CustomObject>